fix(listviewtoolbar): decrease left/right padding so it aligns with list view content

--- a/app/ui-react/packages/ui/src/Shared/ListViewToolbar.css
+++ b/app/ui-react/packages/ui/src/Shared/ListViewToolbar.css
@@ -1,3 +1,8 @@
+.list-view-toolbar .toolbar-pf > .col-sm-12 {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
 @media (max-width: 768px) {
   .toolbar-pf-actions > .toolbar-pf-filter,
   .toolbar-pf-actions > .form-group {
